Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -480,9 +480,10 @@ runloop.run(main())</code></pre>
     </section>
 
     <footer>
-        <p>Generado para la clase de Fundamentos de Robótica - UAM 2025</p>
+        <p>Hecho para la clase de Fundamentos de Robótica - UAM 2025</p>
     </footer>
 </div>
 
 </body>
+
 </html>
